# linux-qq

client/: CMakeLists.txt
client/include/: ChatWindow.h  ClientNetwork.h  Config.h  LoginDialog.h  MainWindow.h  Protocol.h  RegisterDialog.h
client/src/: TestClient.cpp
server/: CMakeLists.txt
server/include/: ChatServer.h  Config.h  DatabaseManager.h  Protocol.h  ThreadPool.h  Utils.h
server/src/: ChatServer.cpp  DatabaseManager.cpp  Protocol.cpp  ThreadPool.cpp  Utils.cpp  main.cpp
